<resources>
    <string name="app_name">islami</string>

    <string name="ad_id" translatable="false">ca-app-pub-5169956365910255~4844827484</string>
    <string name="interstitial" translatable="false">ca-app-pub-5169956365910255/3282013505</string>
    <string name="date_conversion_ad" translatable="false">ca-app-pub-5169956365910255/9135786040</string>
    <string name="mainActivityBanner" translatable="false">ca-app-pub-5169956365910255/9814249376</string>
    <string name="dashboardBanner" translatable="false">ca-app-pub-5169956365910255/8629994367</string>
    <string name="topicBanner" translatable="false">ca-app-pub-5169956365910255/6120215242</string>

    <string name="muhammad">Muhammad pbuh Story</string>
    <string name="stories">Stories</string>
    <string name="quotes">Quotes</string>
    <string name="prophets_tree">Prophets Tree</string>
    <string name="topics">Topics</string>
    <string name="suggested_to_you">Suggested to you</string>
    <string name="hadiths">Hadiths</string>
    <string name="quranic_verses">Quranic verses</string>
    <string name="prophetsFamilyTree">Prophets family tree</string>
    <string name="muhammadFamilyTree">Muhammad family tree</string>
    <string name="bigFamilyTree">The big family tree</string>
    <string name="send_feedback">Send us Feedback</string>
    <string name="rate_app">"Rate Application "</string>
    <string name="language">Languages</string>
    <string name="themes">Theme</string>
    <string name="share">Share</string>
    <string name="view_images">View images</string>
    <string name="send">Send</string>
    <string name="please_give_details_on_the_issue_or_provide_general_feedback">Please provide details of the issue or provide general feedback</string>
    <string name="could_download">download image by long press</string>
    <string name="couldnotDownload">you will not able to download images</string>
    <string name="saved">Downloaded</string>
    <string name="failedToDownload">Failed to download</string>
    <string name="part">part </string>
    <string name="noWordsToSend">No words to send</string>
    <string name="thanks_for_your_time">Thanks for your time</string>
    <string name="didYouFinished">Did you finished?</string>
    <string name="notYet">Not yet</string>
    <string name="yes">Yes</string>
    <string name="brief">Brief</string>
    <string name="couldYouRateThisArticle">Could you rate this article?</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="lightTheme">Light theme</string>
    <string name="nightTheme">Night theme</string>
    <string name="pickOne">Pick the suitable for you</string>
    <string name="followSystem">follow the system</string>
    <string name="hadithOfDay">Hadith of day</string>
    <string name="settings">Settings</string>
    <string name="daily">Daily</string>
    <string name="dashboard">Dashboard</string>
    <string name="family_tree">Family tree</string>
    <string name="allahNames">Allah names</string>
    <string name="qibla">Qibla</string>
    <string name="prayerTimes">Prayer times</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dateConversion">Date conversion</string>
    <string name="hijri">Hijri</string>
    <string name="gregorian">Gregorian</string>
    <string name="prayerTimesTitle">Prayer times for </string>
    <string name="quran">Quran</string>
    <string name="versesNumber">verses number</string>
    <string name="hizbNumber">"hizb ۩ "</string>
    <string name="notification">notification</string>
    <string name="bookmark">bookmark</string>
    <string name="tafsir">tafseer</string>
    <string name="azkar">Azkar</string>
    <string name="morningAzkar">Morning remembrance</string>
    <string name="eveningAzkar">Evening remembrance</string>
    <string name="verseOfDay">Verse of day</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednsday">Wednsday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="muharram">Muhrram</string>
    <string name="safar">Safar</string>
    <string name="rabeAwl">Rabi\' al-Awl</string>
    <string name="rabeAkhr">Rabi\' al-Aakhr</string>
    <string name="jamadAwl">Jamad al-Awl</string>
    <string name="jamadAkhr">Jamad al-Akhr</string>
    <string name="rajab">Rajab</string>
    <string name="shaban">Sha\'ban</string>
    <string name="ramadan">Ramadan</string>
    <string name="shawal">Shawwal</string>
    <string name="dhuKeada">Dhu al-Qi‘dah</string>
    <string name="dhuHija">Dhu al-Hijjah</string>
    <string name="day">Day</string>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="prayerVerse">وَاسْتَعِينُوا بِالصَّبْرِ وَالصَّلَاةِ وَإِنَّهَا لَكَبِيرَةٌ إِلَّا عَلَى الْخَاشِعِينَ</string>
    <string name="notificationVerse">وَأَنْ أَقِيمُوا الصَّلَاةَ وَاتَّقُوهُ وَهُوَ الَّذِي إِلَيْهِ تُحْشَرُونَ</string>
    <string name="noInternet">No Internet Connection</string>
    <string name="azan">azan</string>
    <string name="subscribe">subscribe</string>
    <string name="unSubscribe">unsubscribe</string>
    <string name="readData">What you read</string>
    <string name="azanSetting">Azan setting</string>
    <string name="notificationSetting">Notification setting</string>
    <string name="themeSetting">Theme setting</string>
    <string name="languageSetting">Language setting</string>
    <string name="_00_00">00:00</string>
    <string name="bookmarks">bookmarks</string>
    <string name="couldnotGetPrayers">you will not get prayer times</string>
    <string name="download">Download</string>
    <string name="options">Options</string>
    <string name="videos">videos</string>
    <string name="couldnotGetQibla">you will not able to know qibla</string>
    <string name="onlyCurrentMonth">only current month you can view</string>
    <string name="translateWords">Translate words</string>
    <string name="direction_to_mecca">Direction to Mecca</string>
    <string name="see_full_month">See full month</string>
    <string name="tryAgain">try again in difrrent time</string>

    <string-array name="custom_weekdays">
        <item>Sn</item>
        <item>Mn</item>
        <item>Tu</item>
        <item>We</item>
        <item>Th</item>
        <item>Fr</item>
        <item>St</item>
    </string-array>

    <string-array name="custom_months">
        <item>Muharram</item>
        <item>Safar</item>
        <item>Rabi al-Awl</item>
        <item>Rabi al-Akhr</item>
        <item>Jumad al-Awl</item>
        <item>Jumad al-Akhr</item>
        <item>Rajab</item>
        <item>Shaaban</item>
        <item>Ramadan</item>
        <item>Shawwal</item>
        <item>Dhu al-Qidah</item>
        <item>Dhu al-Hijjah</item>
    </string-array>
</resources>
