<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/story"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_stories"
            android:icon="@drawable/story"
            android:title="@string/stories" />
        <item
            android:id="@+id/nav_daily"
            android:icon="@drawable/quote"
            android:title="@string/daily" />
        <item
            android:id="@+id/nav_quotes"
            android:icon="@drawable/family_tree"
            android:title="@string/quotes" />
        <item
            android:id="@+id/nav_topics"
            android:icon="@drawable/topics"
            android:title="@string/topics" />
        <item
            android:id="@+id/nav_family_tree"
            android:icon="@drawable/family_tree"
            android:title="@string/prophets_tree" />

    </group>
</menu>