<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:elevation="0dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="64dp"
            android:text="@string/options"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/download"
            android:textSize="19sp"
            app:drawableStartCompat="@drawable/ic_download" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/share"
            android:visibility="gone"
            android:textSize="19sp"
            app:drawableStartCompat="@drawable/ic_share" />

    </LinearLayout>

</androidx.cardview.widget.CardView>

