<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="64dp"
    android:background="@drawable/bg_rounded">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/alertTitle"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:text="@string/didYouFinished"
            android:textColor="@color/titleColor"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="64dp"
            android:background="@drawable/bg_rounded"
            android:backgroundTint="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/actionBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/notYet"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/notYet"
                android:textColor="#D32F2F"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/yes"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/yes"
                android:textColor="#00C853"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/alertContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>
